# inspect_dataset

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.claude/skills/inspect-dataset-audit/: SKILL.md
.github/: zizmor.yml
.github/workflows/: ci.yml  release.yml
src/inspect_dataset/: _llm.py  _types.py  cli.py  loader.py  report.py  scanner.py
src/inspect_dataset/_view/: discovery.py  server.py
src/inspect_dataset/_view/www/: .prettierignore  index.html  package-lock.json  package.json  vite.config.ts
src/inspect_dataset/_view/www/src/: App.tsx  api.ts  main.tsx  store.ts  types.ts
src/inspect_dataset/_view/www/src/components/: AuditView.tsx  DatasetPicker.tsx  ExplorerHome.tsx  ExplorerView.tsx  FindingDetail.tsx  FindingsList.tsx  Header.tsx  SamplesTab.tsx
src/inspect_dataset/_view/www/src/hooks/: useKeyboard.ts
src/inspect_dataset/scanners/: __init__.py  _artifacts.py  ambiguity.py  answer_distribution.py  answerability.py  duplicate_questions.py  encoding_issues.py  extraction_artifacts.py  forced_choice_leakage.py  gold_fidelity.py  image_mime_type.py  inconsistent_format.py  label_correctness.py  markdown_integrity.py  numeric_provenance.py  text_layer_recall.py
tests/: test_ambiguity.py  test_answerability.py  test_cli_config.py  test_cli_view.py  test_cross_artifact.py  test_discovery_schema.py  test_duplicate_questions.py  test_explorer_api.py  test_extraction_artifacts.py  test_forced_choice_leakage.py  test_gold_fidelity.py  test_inconsistent_format.py  test_label_correctness.py  test_load_inspect_task.py  test_load_local_samples.py  test_markdown_integrity.py  test_report.py  test_scanner_module_plugin.py  test_view_e2e.py  test_view_local_api.py
tests/_fixtures/view_findings/: answer_length.json  duplicate_questions.json  inconsistent_format.json  samples.json  scan_summary.json
