[project]
name = "inspect-dataset"
version = "0.4.0"
description = "Dataset quality scanner for AI evaluation datasets"
readme = "README.md"
authors = [
    { name = "Matt Fisher", email = "m@ttfisher.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "click>=8.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "datasets>=2.0",
    "openai>=2.30.0",
]

[project.scripts]
inspect-dataset = "inspect_dataset.cli:cli"

[project.optional-dependencies]
inspect = [
    "inspect-ai>=0.3",
    "openai>=2.30.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_unused_ignores = false
disable_error_code = ["type-arg", "arg-type"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "inspect-evals>=0.3.103",
    "playwright>=1.40",
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "ruff>=0.4",
    "mypy>=1.10",
]
