[project]
name = "inspect-dataset"
version = "0.4.0"
description = "Dataset quality scanner for AI evaluation datasets"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Matt Fisher", email = "m@ttfisher.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "click>=8.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "datasets>=2.0",
    "openai>=2.30.0",
]

[project.scripts]
inspect-dataset = "inspect_dataset.cli:cli"

[project.optional-dependencies]
inspect = [
    "inspect-ai>=0.3",
    "openai>=2.30.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# The viewer frontend ships only as its built bundle (_view/www/dist);
# node_modules must never reach the sdist or wheel.
source-exclude = ["**/node_modules/**"]
wheel-exclude = ["**/node_modules/**"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "D",     # pydocstyle
    "C4",    # flake8-comprehensions
    "PT",    # flake8-pytest-style
    "PIE",   # flake8-pie
    "DTZ",   # flake8-datetimez (timezone-aware datetimes)
    "ISC",   # implicit-str-concat (catches missing commas)
    "ASYNC", # flake8-async
    "N",     # pep8-naming
    "FURB",  # refurb (modernization)
    "RUF",   # ruff-specific rules
    "PLE",   # pylint errors
    "PLW",   # pylint warnings
]
ignore = [
    # E501 stays ON (template deviation): ruff-format wraps code but never
    # splits string literals or comments, so long help texts and messages
    # sail past the limit unchecked without it.
    "D10",    # missing docstrings — don't force them
    "D415",   # first-line punctuation — the module docstring is the project
    # description, whose punctuation varies
    "ISC001", # single-line implicit concat — conflicts with the formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"] # tests don't need docstring linting

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true # third-party libs are often untyped

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "inspect-evals>=0.3.103",
    "playwright>=1.40",
    "pre-commit>=4.0",
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "ruff>=0.4",
    "mypy>=1.10",
]
